# big-drawing-berry

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  valkey.conf
backend/: Cargo.toml
backend/common/src/: draw_event.rs  lib.rs  region.rs  valkey.rs
backend/indexer/: Cargo.toml
backend/indexer/src/: main.rs  processor.rs
backend/server/: Cargo.toml
backend/server/src/: api.rs  board.rs  config.rs  consumer.rs  main.rs  ws.rs
contract/: Cargo.toml  build.sh
contract/src/: lib.rs
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Board.tsx  Minimap.tsx  Toolbar.tsx  WalletButton.tsx  ZoomControls.tsx
frontend/src/hooks/: useBoard.ts  useCamera.ts  useDrawing.ts  useWallet.ts
frontend/src/lib/: api.ts  canvas-renderer.ts  constants.ts  owner-cache.ts  region-cache.ts  types.ts  ws.ts
