[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
fastnear-neardata-fetcher = "0.34"
fastnear-primitives = "0.34"
redis = { version = "0.27", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
anyhow = "1"
ctrlc = "3"
